# C_With_Generic_Window

./: CMakeLists.txt  README.md
include/: generics_interface.h  generics_util.h  test_generics.h
src/: test_generics.c
